--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@ ul li.checked::before {
 .close:hover {
   background-color: #f44336;
   color: white;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 /* Style the header */
